src/stylesheets/PlotStylesheets/WaterFallPlotComponent.css
.waterfall-plot-container {
    width: 100%;
    display: flex;
    justify-content: center;
}

.waterfall-plot-wrapper {
    position: relative;
    width: 100%;
    max-width: 800px;
}

.waterfall-plot-offset-input-box {
    position: absolute;
    bottom: -30px;
    right: 5px;
    z-index: 10;
}

.offset-input {
    padding: 10px 14px;
    font-size: 15px;
    border: 1px solid #ccc;
    border-radius: 8px;
    outline: none;
    transition: border 0.2s ease-in-out;
    width: 215px;
}

.offset-input:focus {
    border-color: #4dbfdb;
    box-shadow: 0 0 4px rgba(77, 191, 219, 0.4);
}

